--- a/Templates/article.html
+++ b/Templates/article.html
@@ -1,7 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<h1>{{id}}</h1>   
+	<h1>{{article[1]}}</h1> 
+  <p>
+    {{article[3]}}
+  </p>  
 {% endblock %}
 
  <!-- <h1>{{article.title}}</h1> -->
